# nix-profile-packagekit-backend

./: .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  REFERENCE.md  SBOM.md  SUMMARY.md  TESTING.md  TODO.md  UPDATE_NOTICE.md  appstream-package.nix  appstream.py  appstream_parser.py  flake.nix  generate_sbom.py  justfile  known-mappings.json  meson.build.backend  module.nix  nix-profile.conf  nix_profile.py  nix_profile_backend.py  nix_search.py  nixpkgs-apps.json  nixpkgs_appdata.py  package.nix  pk-backend-nix-profile.c  pyproject.toml  pyrightconfig.json  requirements.txt  sbom.json  sbom.sh  test-local.sh  (+2 more)
appstream-data/: correlation-report.json
nixos-appstream-generator/: Cargo.toml
packagekit/: enums.py
tests/: integration.nix  test_c_backend.py  test_e2e_integration.py  test_nix_profile.py  test_nix_profile_backend.py  test_nix_search.py  test_sbom.py
