[project]
name = "packagekit-nix-profile"
version = "1.0.0"
description = "PackageKit backend for Nix profile management"
authors = [
    {name = "PackageKit Nix Backend Contributors"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-2.0-or-later"}
keywords = ["packagekit", "nix", "package-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "brotli>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
packagekit-nix-profile = "nixProfileBackend:main"

[project.urls]
Homepage = "https://github.com/yourusername/packagekit-nix-profile"
Repository = "https://github.com/yourusername/packagekit-nix-profile"
Issues = "https://github.com/yourusername/packagekit-nix-profile/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
