[package]
name = "nixos-appstream-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
xmltree = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
image = "0.24"
sysinfo = "0.24"
owo-colors = { version = "3.4", features = ["supports-colors"] }
curl = "0.4"